# ble_ota_example

./: .gitignore  README.md
ble_client/: main.py
ble_client/proto/: device_feature_pb2.py
bleprph/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
bleprph/main/: CMakeLists.txt  device_info.pb-c.c  device_info.pb-c.h  device_info.proto  gap.c  gatt_svr.c  gatt_svr.h  main.c
bleprph/main/proto/: device_feature.pb-c.c  device_feature.pb-c.h  device_feature.proto
